Add Heroku deployment files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
-click==8.0.1
-Flask==2.0.2
+click==8.1.2
+distlib==0.3.4
+filelock==3.6.0
+Flask==2.1.1
 gunicorn==20.1.0
-itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
-PyYAML==5.4.1
-urllib3==1.26.7
-Werkzeug==2.0.2
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+platformdirs==2.5.1
+PyYAML==6.0
+six==1.16.0
+urllib3==1.26.9
+virtualenv==20.14.1
+Werkzeug==2.1.1
+zipp==3.8.0
